--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <!-- S T A R T About S E C T I O N -->
     <section class="about mt-5" id="about">
-        <div class="container mt-5 pt-4">
+        <div class="container mt-5 pt-4 mt-4">
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="section-title position-relative">
